--- a/AL/app.json
+++ b/AL/app.json
@@ -1,27 +1,37 @@
 {
-  "id": "ea2c2ec3-4d1b-4063-82ce-b32ec1d25dfb",
-  "name": "HelloWorld",
-  "publisher": "Navision.guru",
-  "brief": "",
-  "description": "",
-  "version": "1.0.0.0",
-  "privacyStatement": "",
-  "EULA": "",
-  "help": "",
-  "url": "",
-  "logo": "",
-  "target":"Extension",
-  "showMyCode": true,
-  "features": [
-    "TranslationFile"
-  ],  
-  "capabilities": [],
-  "dependencies": [],
-  "screenshots": [],
-  "platform": "13.0.0.0",
-  "application": "13.0.0.0",
-  "idRange": {
-    "from": 50100,
-    "to": 50149
-  }
+    "id":  "479e77f3-031a-49fe-bb6a-314464c6a9a8",
+    "name":  "G/L Source Names",
+    "publisher":  "Objects4NAV",
+    "brief":  "Source Names in G/L Entries",
+    "description":  "G/L Source Names adds the source name to the G/L Entries page.  Source Name is the customer in sales transaction and the vendor in purchase transactions",
+    "version":  "2.1.1.0",
+    "privacyStatement":  "http://objects4nav.com/privacy",
+    "EULA":  "http://objects4nav.com/terms",
+    "help":  "http://objects4nav.com/glsourcenames",
+    "url":  "http://objects4nav.com",
+    "logo":  "Images\\Logo250x250.png",
+    "platform":  "12.0.0.0",
+    "application":  "12.0.0.0",
+    "target":  "Extension",
+    "showMyCode":  true,
+    "capabilities":  [
+
+                     ],
+    "screenshots":  [
+                        "Screenshots\\AssistedSetup.PNG",
+                        "Screenshots\\AssistedSetupFinished.PNG",
+                        "Screenshots\\CustomerSourceCard.PNG",
+                        "Screenshots\\ExtensionInstallation.PNG",
+                        "Screenshots\\SourceNamesInGLEntries.PNG"
+                    ],
+    "dependencies":  [
+
+                     ],
+    "idRange":  {
+                    "from":  70009200,
+                    "to":  70009239
+                },
+    "features":  [
+                     "TranslationFile"
+                 ]
 }
