--- a/ALTests/app.json
+++ b/ALTests/app.json
@@ -1,35 +1,57 @@
 {
-  "id": "35dbc8d5-a872-45cc-9809-2a3665b1850e",
-  "name": "G/L Source Names Tests",
-  "publisher": "Objects4NAV",
-  "brief":  "Test Tool for Source Names in G/L Entries",
-  "description":  "G/L Source Names adds the source name to the G/L Entries page.  Source Name is the customer in sales transaction and the vendor in purchase transactions.  This extension is used to test the functionality automatically.",
-  "version":  "1.0.0.0",
-  "privacyStatement":  "http://objects4nav.com/privacy",
-  "EULA":  "http://objects4nav.com/terms",
-  "help":  "http://objects4nav.com/glsourcenames",
-  "url":  "http://objects4nav.com",
-  "logo":  "Images\\Logo250x250.png",
-  "capabilities": [],
-  "dependencies": [
-    {
-      "name": "G/L Source Names",
-      "publisher": "Objects4NAV",
-      "version": "2.1.1.0",
-      "appId": "479e77f3-031a-49fe-bb6a-314464c6a9a8"
-    }
-  ],
-  "screenshots": [],
-  "platform": "12.0.12928.0",
-  "application": "12.0.21812.0",
-  "target": "Extension",
-  "showMyCode": true,
-  "idRange":  {
-                    "from":  70009240,
-                    "to":  70009249
-                },
-  "features": [
-    "TranslationFile"
-  ]  
-              
+    "id": "35dbc8d5-a872-45cc-9809-2a3665b1850e",
+    "name": "G/L Source Names Tests",
+    "publisher": "Objects4NAV",
+    "brief": "Test Tool for Source Names in G/L Entries",
+    "description": "G/L Source Names adds the source name to the G/L Entries page.  Source Name is the customer in sales transaction and the vendor in purchase transactions.  This extension is used to test the functionality automatically.",
+    "version": "4.16.0.0",
+    "privacyStatement": "http://objects4nav.com/privacy",
+    "EULA": "http://objects4nav.com/terms",
+    "help": "http://objects4nav.com/glsourcenames",
+    "url": "http://objects4nav.com",
+    "logo": "Images\\Logo250x250.png",
+    "dependencies": [
+        {
+            "name": "Application",
+            "publisher": "Microsoft",
+            "version": "16.0.0.0",
+            "appId": "c1335042-3002-4257-bf8a-75c898ccb1b8"
+        },
+        {
+            "appId": "23de40a6-dfe8-4f80-80db-d70f83ce8caf",
+            "name": "Test Runner",
+            "publisher": "Microsoft",
+            "version": "16.0.0.0"
+        },
+        {
+            "appId": "dd0be2ea-f733-4d65-bb34-a28f4624fb14",
+            "name": "Library Assert",
+            "publisher": "Microsoft",
+            "version": "16.0.0.0"
+        },
+        {
+            "appId": "5d86850b-0d76-4eca-bd7b-951ad998e997",
+            "name": "Tests-TestLibraries",
+            "publisher": "Microsoft",
+            "version": "16.0.0.0"
+        },
+        {
+            "name": "G/L Source Names",
+            "publisher": "Objects4NAV",
+            "version": "4.16.0.0",
+            "appId": "479e77f3-031a-49fe-bb6a-314464c6a9a8"
+        }
+    ],
+    "screenshots": [],
+    "runtime": "4.0",
+    "platform": "16.0.0.0",
+    "target": "Cloud",
+    "showMyCode": true,
+    "idRanges":[ {
+        "from": 70009240,
+        "to": 70009249
+    }],
+    "features": [
+        "TranslationFile"
+    ]
 }
