--- a/AL/app.json
+++ b/AL/app.json
@@ -36,5 +36,6 @@
     ],
     "features": [
         "TranslationFile"
-    ]
+    ],
+    "contextSensitiveHelpUrl": "https://objects4nav.com/glsourcenames/"
 }
