--- a/ALTests/app.json
+++ b/ALTests/app.json
@@ -53,5 +53,6 @@
     }],
     "features": [
         "TranslationFile"
-    ]
+    ],
+    "contextSensitiveHelpUrl": "https://objects4nav.com/glsourcenames/"
 }
