--- a/Azure-pipelines.yml
+++ b/Azure-pipelines.yml
@@ -28,7 +28,13 @@ stages:
         inputs:
           scriptType: inlineScript
           inlineScript: >
-            Update-Module navcontainerhelper -Force;
+            $navContainerHelperLatestVersion = (Find-Module -Name navcontainerhelper).Version;
+            $navContainerHelperCurrentVersion = (Get-InstalledModule -Name navcontainerhelper -ErrorAction SilentlyContinue).Version;
+            if (!$navContainerHelperCurrentVersion) {
+              Install-Module -Name navcontainerhelper -Force
+            } elseif ($navContainerHelperLatestVersion -ne $navContainerHelperCurrentVersion) {
+              Update-Module navcontainerhelper -Force;
+            }
             Import-Module navcontainerhelper -DisableNameChecking;
             $Password = (New-Guid).ToString().SubString(0,15) + ',.!A';
             $Credential = New-Object System.Management.Automation.PSCredential($env:USERNAME, (ConvertTo-SecureString $Password -AsPlainText -Force));        
@@ -72,7 +78,7 @@ stages:
               $ExtensionAppJsonObject | ConvertTo-Json | set-content $ExtensionAppJsonFile }
               
       - task: PowerShell@1
-        displayName: Compile app
+        displayName: Compile apps
         inputs:
           scriptType: inlineScript
           inlineScript: >
@@ -87,6 +93,18 @@ stages:
             } else {
               $WorkspaceFolders | % {Compile-AppInNavContainer -containerName $(container_name) -appProjectFolder (Join-Path $SourceDir $_.path) -credential $Credential -AzureDevOps -FailOn 'error' -CopyAppToSymbolsFolder -Verbose}
             }
+
+      - task: PowerShell@1
+        displayName: Sign apps into container
+        inputs:
+          scriptType: inlineScript
+          inlineScript: >          
+            Import-Module navcontainerhelper -DisableNameChecking;
+            $SourceDir = 'C:\ProgramData\NavContainerHelper\Extensions\$(container_name)\Source';
+            $WorkspaceFile = Get-ChildItem -Path $SourceDir -Filter "*.code-workspace";
+            $certFile = Get-Item -path "c:\AdvaniaGIT\License\Kappi*.p7b";
+            $WorkspaceFolders = (Get-Content -Path $WorkspaceFile.FullName -Encoding UTF8 | ConvertFrom-Json).folders;
+            $WorkspaceFolders | % {Get-ChildItem  (Join-Path $SourceDir (Join-Path $_.path 'output'))} | % {Sign-BCContainerApp -containerName '$(container_name)' -appFile $_.FullName -pfxFile $certFile.FullName}
 
       - task: PowerShell@1
         displayName: Publish and install app into container
@@ -106,8 +124,19 @@ stages:
           inlineScript: >
             $Credential = New-Object System.Management.Automation.PSCredential($env:USERNAME, (ConvertTo-SecureString (Get-Content -Encoding UTF8 -Path 'C:\ProgramData\NavContainerHelper\Extensions\$(container_name)\My\Container.info')));        
             Import-Module navcontainerhelper -DisableNameChecking;
-            $ResultPath = 'C:\ProgramData\NavContainerHelper\Extensions\$(container_name)\my\Results.xml';        
-            Run-TestsInBcContainer -containerName '$(container_name)' -credential $Credential -detailed -AzureDevOps warning -XUnitResultFileName $ResultPath -debugMode
+            $ResultPath = 'C:\ProgramData\NavContainerHelper\Extensions\$(container_name)\my\Results.xml';
+            $tests = Get-TestsFromBCContainer -containerName '$(container_name)' -credential $Credential -ignoreGroups -testSuite "DEFAULT" -debugMode
+            $tests | % {
+                if (-not (Run-TestsInBcContainer -containerName '$(container_name)' -credential $Credential -XUnitResultFileName $ResultPath -AppendToXUnitResultFile:(!$first) -testSuite "DEFAULT" -testCodeunit $_.Id -returnTrueIfAllPassed -restartContainerAndRetry)) { $rerunTests += $_ }
+                $first = $false
+            }
+            if ($rerunTests.Count -gt 0 -and $reRunFailedTests) {
+                Restart-BCContainer -containerName '$(container_name)'
+                $rerunTests | % {
+                  if (-not (Run-TestsInBcContainer -containerName '$(container_name)' -credential $credential -XUnitResultFileName $ResultPath -AppendToXUnitResultFile:(!$first) -testSuite "DEFAULT" -testCodeunit $_.Id -returnTrueIfAllPassed -restartContainerAndRetry)) { $failedTests += $_ }
+                    $first = $false
+                }
+            }            
 
       - task: PublishTestResults@2
         displayName: Upload test results    
@@ -116,22 +145,7 @@ stages:
           testResultsFormat: XUnit
           testResultsFiles: '*.xml'
           searchFolder: C:\ProgramData\NavContainerHelper\Extensions\$(container_name)\my
-
-      - task: PowerShell@1
-        displayName: Compile app without test
-        condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))        
-        inputs:
-          scriptType: inlineScript
-          inlineScript: >
-            Import-Module navcontainerhelper -DisableNameChecking;
-            $SourceDir = 'C:\ProgramData\NavContainerHelper\Extensions\$(container_name)\Source';
-            $Credential = New-Object System.Management.Automation.PSCredential($env:USERNAME, (ConvertTo-SecureString (Get-Content -Encoding UTF8 -Path 'C:\ProgramData\NavContainerHelper\Extensions\$(container_name)\My\Container.info')));
-            $WorkspaceFile = Get-ChildItem -Path $SourceDir -Filter "*.code-workspace";
-            $WorkspaceFolders = (Get-Content -Path $WorkspaceFile.FullName -Encoding UTF8 | ConvertFrom-Json).folders;
-            $WorkspaceFolders | % {Remove-Item -Path (join-path (Join-Path $SourceDir $_.path) 'test') -Recurse -Force -ErrorAction SilentlyContinue};
-            $WorkspaceFolders | % {Remove-Item -Path (join-path (Join-Path $SourceDir $_.path) 'output') -Recurse -Force -ErrorAction SilentlyContinue};
-            $WorkspaceFolders | % {if ($_.path -inotmatch 'test') {Compile-AppInNavContainer -containerName '$(container_name)' -appProjectFolder (Join-Path $SourceDir $_.path) -credential $Credential -AzureDevOps -FailOn 'error'}}
-
+     
       - task: PowerShell@1
         displayName: Copy app into build artifacts staging folder
         inputs:
