--- a/Azure-pipelines.yml
+++ b/Azure-pipelines.yml
@@ -83,16 +83,13 @@ stages:
           scriptType: inlineScript
           inlineScript: >
             Import-Module navcontainerhelper -DisableNameChecking;
-            $SourceDir = 'C:\ProgramData\NavContainerHelper\Extensions\$(container_name)\Source';
+            $SourceDir = 'C:\ProgramData\NavContainerHelper\Extensions\$(container_name)\Source';            
             $DependenciesDir = 'C:\ProgramData\NavContainerHelper\Extensions\$(container_name)\Source\Dependencies';
+            if (!(Test-Path -Path $DependenciesDir -PathType Container)) {New-Item -ItemType Directory -Path $DependenciesDir}
             $Credential = New-Object System.Management.Automation.PSCredential($env:USERNAME, (ConvertTo-SecureString (Get-Content -Encoding UTF8 -Path 'C:\ProgramData\NavContainerHelper\Extensions\$(container_name)\My\Container.info')));
             $WorkspaceFile = Get-ChildItem -Path $SourceDir -Filter "*.code-workspace";
             $WorkspaceFolders = (Get-Content -Path $WorkspaceFile.FullName -Encoding UTF8 | ConvertFrom-Json).folders;
-            if (Test-Path $DependenciesDir) {
-              $WorkspaceFolders | % {Compile-AppInNavContainer -containerName $(container_name) -appProjectFolder (Join-Path $SourceDir $_.path) -credential $Credential -appSymbolsFolder $DependenciesDir -AzureDevOps -FailOn 'error' -CopyAppToSymbolsFolder}
-            } else {
-              $WorkspaceFolders | % {Compile-AppInNavContainer -containerName $(container_name) -appProjectFolder (Join-Path $SourceDir $_.path) -credential $Credential -AzureDevOps -FailOn 'error' -CopyAppToSymbolsFolder -Verbose}
-            }
+            $WorkspaceFolders | % {Compile-AppInNavContainer -containerName $(container_name) -appProjectFolder (Join-Path $SourceDir $_.path) -credential $Credential -appSymbolsFolder $DependenciesDir -AzureDevOps -FailOn 'error' -CopyAppToSymbolsFolder}
 
       - task: PowerShell@1
         displayName: Sign apps into container
