--- a/Azure-pipelines.yml
+++ b/Azure-pipelines.yml
@@ -122,16 +122,17 @@ stages:
             $Credential = New-Object System.Management.Automation.PSCredential($env:USERNAME, (ConvertTo-SecureString (Get-Content -Encoding UTF8 -Path 'C:\ProgramData\NavContainerHelper\Extensions\$(container_name)\My\Container.info')));        
             Import-Module navcontainerhelper -DisableNameChecking;
             $ResultPath = 'C:\ProgramData\NavContainerHelper\Extensions\$(container_name)\my\Results.xml';
-            $tests = Get-TestsFromBCContainer -containerName '$(container_name)' -credential $Credential -ignoreGroups -testSuite "DEFAULT" -debugMode;
+            $testSuite = 'DEFAULT';
+            $tests = Get-TestsFromBCContainer -containerName '$(container_name)' -credential $Credential -ignoreGroups -testSuite $testSuite -debugMode;
             Write-Host "Found $($tests.Count) to execute...";
             $tests | % {
-                if (-not (Run-TestsInBcContainer -containerName '$(container_name)' -credential $Credential -XUnitResultFileName $ResultPath -AppendToXUnitResultFile:(!$first) -testSuite "DEFAULT" -testCodeunit $_.Id -returnTrueIfAllPassed -restartContainerAndRetry)) { $rerunTests += $_ }
+                if (-not (Run-TestsInBcContainer -containerName '$(container_name)' -credential $Credential -XUnitResultFileName $ResultPath -AppendToXUnitResultFile:(!$first) -testSuite $testSuite -testCodeunit $_.Id -returnTrueIfAllPassed -restartContainerAndRetry)) { $rerunTests += $_ }
                 $first = $false
             }
             if ($rerunTests.Count -gt 0 -and $reRunFailedTests) {
                 Restart-BCContainer -containerName '$(container_name)'
                 $rerunTests | % {
-                  if (-not (Run-TestsInBcContainer -containerName '$(container_name)' -credential $credential -XUnitResultFileName $ResultPath -AppendToXUnitResultFile:(!$first) -testSuite "DEFAULT" -testCodeunit $_.Id -returnTrueIfAllPassed -restartContainerAndRetry)) { $failedTests += $_ }
+                  if (-not (Run-TestsInBcContainer -containerName '$(container_name)' -credential $credential -XUnitResultFileName $ResultPath -AppendToXUnitResultFile:(!$first) -testSuite $testSuite -testCodeunit $_.Id -returnTrueIfAllPassed -restartContainerAndRetry)) { $failedTests += $_ }
                     $first = $false
                 }
             }            
