--- a/Azure-pipelines.yml
+++ b/Azure-pipelines.yml
@@ -119,25 +119,12 @@ stages:
         inputs:
           scriptType: inlineScript
           inlineScript: >
-            $Credential = New-Object System.Management.Automation.PSCredential($env:USERNAME, (ConvertTo-SecureString (Get-Content -Encoding UTF8 -Path 'C:\ProgramData\NavContainerHelper\Extensions\$(container_name)\My\Container.info')));        
+            $Credential = New-Object System.Management.Automation.PSCredential($env:USERNAME, (ConvertTo-SecureString (Get-Content -Encoding UTF8 -Path 'C:\ProgramData\NavContainerHelper\Extensions\$(container_name)\My\Container.info')));
             Import-Module navcontainerhelper -DisableNameChecking;
             $ResultPath = 'C:\ProgramData\NavContainerHelper\Extensions\$(container_name)\my\Results.xml';
             $testSuite = 'DEFAULT';
-            $rerunTests = @();
-            $first = $true;
-            $tests = Get-TestsFromBCContainer -containerName '$(container_name)' -credential $Credential -ignoreGroups -testSuite $testSuite -debugMode;
-            Write-Host "Found $($tests.Count) to execute...";
-            $tests | % {
-                if (-not (Run-TestsInBcContainer -containerName '$(container_name)' -credential $Credential -XUnitResultFileName $ResultPath -AppendToXUnitResultFile:(!$first) -testSuite $testSuite -testCodeunit $_.Id -returnTrueIfAllPassed -restartContainerAndRetry)) { $rerunTests += $_ }
-                $first = $false
-            }
-            if ($rerunTests.Count -gt 0) {
-                Restart-BCContainer -containerName '$(container_name)'
-                $rerunTests | % {
-                  if (-not (Run-TestsInBcContainer -containerName '$(container_name)' -credential $credential -XUnitResultFileName $ResultPath -AppendToXUnitResultFile:(!$first) -testSuite $testSuite -testCodeunit $_.Id -returnTrueIfAllPassed -restartContainerAndRetry)) { $failedTests += $_ }
-                    $first = $false
-                }
-            }            
+            $tests = Get-TestsFromBCContainer -containerName '$(container_name)' -credential $Credential -ignoreGroups -testSuite $testSuite;
+            $tests | % { Run-TestsInBcContainer -containerName '$(container_name)' -credential $Credential -XUnitResultFileName $ResultPath -testSuite $testSuite -testCodeunit $_.Id -AzureDevOps Warning }
 
       - task: PublishTestResults@2
         displayName: Upload test results    
