--- a/Azure-pipelines.yml
+++ b/Azure-pipelines.yml
@@ -37,7 +37,7 @@ stages:
             Import-Module navcontainerhelper -DisableNameChecking;
             $Password = (New-Guid).ToString().SubString(0,15) + ',.!A';
             $Credential = New-Object System.Management.Automation.PSCredential($env:USERNAME, (ConvertTo-SecureString $Password -AsPlainText -Force));        
-            New-BCContainer -accept_eula -accept_outdated -containerName $(container_name) -auth NavUserPassword -credential $Credential -image $(image_name) -licenseFile $(LicenseUrl) -doNotExportObjectsToText -restart no -shortcuts None -includeTestToolkit -includeTestLibrariesOnly -updateHosts;
+            New-BCContainer -accept_eula -accept_outdated -containerName $(container_name) -auth NavUserPassword -credential $Credential -image $(image_name) -licenseFile $(LicenseUrl) -doNotExportObjectsToText -restart no -shortcuts None -includeTestToolkit -includeTestLibrariesOnly -updateHosts -EnableTaskScheduler:$false;
             Set-Content -Value (ConvertFrom-SecureString -SecureString $Credential.Password) -Encoding UTF8 -Path 'C:\ProgramData\NavContainerHelper\Extensions\$(container_name)\My\Container.info';
 
       - task: PowerShell@1
