--- a/.output/AL/app.json
+++ b/.output/AL/app.json
@@ -11,7 +11,6 @@
     "url": "http://objects4nav.com",
     "logo": "Images\\Logo250x250.png",
     "platform": "16.0.0.0",
-    "application": "16.0.0.0",
     "runtime": "5.0",
     "showMyCode": true,
     "screenshots": [
@@ -21,7 +20,14 @@
         "Screenshots\\ExtensionInstallation.PNG",
         "Screenshots\\SourceNamesInGLEntries.PNG"
     ],
-    "dependencies": [],
+    "dependencies": [
+        {
+            "name": "Application",
+            "publisher": "Microsoft",
+            "version": "16.0.0.0",
+            "id": "c1335042-3002-4257-bf8a-75c898ccb1b8"
+        }
+    ],
     "idRanges": [
         {
             "from": 70009200,
