--- a/scripts/CI.yml
+++ b/scripts/CI.yml
@@ -1,3 +1,13 @@
+trigger:
+    -'*'
+
+schedules:
+  - cron: 0 3 * * Sun
+    displayName: Schedule weekly builds
+    branches:
+      include: ['master']
+    always: true
+
 stages:
 - stage: Build
   jobs:
