--- a/scripts/Current.yml
+++ b/scripts/Current.yml
@@ -1,9 +1,18 @@
 trigger:
-- master
+- '*'
+    
+schedules:
+- cron: 0 3 * * Sun
+    displayName: Schedule weekly builds
+    branches:
+    include: ['master']
+    always: true
 
 variables:
-  version: "current"
+- group: BusinessCentral16
+- name: version
+    value: "current"
     
 extends:
-  template: CI.yml
+    template: CI.yml
     
