--- a/scripts/NextMinor.yml
+++ b/scripts/NextMinor.yml
@@ -1,11 +1,18 @@
 trigger:
-- master
+- '*'
+  
+schedules:
+- cron: 0 3 * * Sun
+    displayName: Schedule weekly builds
+    branches:
+    include: ['master']
+    always: true
 
 variables:
+- group: BusinessCentral16
 - group: InsiderBuild
-
-variables:
-  version: "nextminor"
+- name: version
+  value: "nextminor"
     
 extends:
   template: CI.yml
