--- a/scripts/NextMajor.yml
+++ b/scripts/NextMajor.yml
@@ -1,19 +1,11 @@
 trigger:
 - '*'
-    
-schedules:
-- cron: 0 3 * * Sun
-    displayName: Schedule weekly builds
-    branches:
-    include: ['master']
-    always: true
 
 variables:
 - group: BusinessCentral16
-- group: InsiderBuild
-- name: version
-    value: "nextmajor"
-    
+- group: InsiderBuilds
+
 extends:
     template: CI.yml
-    
+    parameters:
+    version: "nextmajor"
