--- a/AL/.vscode/launch.json
+++ b/AL/.vscode/launch.json
@@ -5,10 +5,10 @@
                                "type":  "al",
                                "request":  "launch",
                                "name":  "Local Sandbox (GLSN-dev)",
-                               "server":  "http://GLSN-dev",
-                               "serverInstance":  "BC",
-                               "port":  7049,
-                               "tenant":  "",
+                               "server":  "https://traefik.kappi.is",                               
+                               "serverInstance":  "insiderdev",
+                               "port":  443,
+                               "tenant":  "default",
                                "authentication":  "UserPassword",
                                "startupObjectId":  22,
                                "startupObjectType":  "Page",
