--- a/ALTests/.vscode/launch.json
+++ b/ALTests/.vscode/launch.json
@@ -4,9 +4,9 @@
                            {
                                "type":  "al",
                                "request":  "launch",
-                               "name":  "Local Sandbox (GLSN-dev)",
+                               "name":  "Traefik",
                                "server":  "https://traefik.kappi.is",                               
-                               "serverInstance":  "insiderdev",
+                               "serverInstance":  "sandboxdev",
                                "port":  443,
                                "tenant":  "default",
                                "authentication":  "UserPassword",
