--- a/AL/app.json
+++ b/AL/app.json
@@ -3,8 +3,8 @@
     "name": "G/L Source Names",
     "publisher": "Objects4NAV",
     "brief": "Source Names in G/L Entries",
-    "description": "G/L Source Names adds the source name to the G/L Entries page.  Source Name is the customer in sales transaction and the vendor in purchase transactions",
-    "version": "5.1.0.0",
+    "description": "G/L Source Names adds the source name to the G/L Entries page, Item Ledger Entries page and Value Entries page.  Source Name is the customer in sales transaction and the vendor in purchase transactions",
+    "version": "5.2.0.0",
     "privacyStatement": "http://objects4nav.com/privacy",
     "EULA": "http://objects4nav.com/terms",
     "help": "http://objects4nav.com/glsourcenames",
@@ -22,6 +22,7 @@
         "Screenshots\\SourceNamesInGLEntries.PNG"
     ],
     "dependencies": [],
+    "applicationInsightsKey": "ab5e692a-2ef8-40ac-bed4-74fe61285bf2",
     "idRanges": [
         {
             "from": 70009200,
