--- a/scripts/settings.json
+++ b/scripts/settings.json
@@ -35,8 +35,8 @@
     "validation": [
         {
             "branch": "refs/heads/master",
-            "previousApps": [],
-            "countries": ["is","us","fi","dk","se","no"],
+            "previousApps": ["https://365bcfiles.blob.core.windows.net/artifacts/gunnargestsson/glsourcenames/AL/Objects4NAV_GL Source Names_5.2.3.0.app"],
+            "countries": ["is","us","fi","dk","se","no","ca","gb"],
             "affixes": ["O4N"],
             "supportedCountries": ["is","se"]
         }
