--- a/.azureDevOps/Current.yml
+++ b/.azureDevOps/Current.yml
@@ -4,12 +4,15 @@ trigger:
 pr: 
 - '*'
 
+pool: Default
+
 resources:
   repositories:
     - repository: Template
-      type: git
-      name: Apps/Template
-      ref: main
+      type: github
+      endpoint: gunnargestsson # Service Connection
+      name: gunnargestsson/bcbuildtemplate
+      ref: master
 
 variables:
 - group: BuildVariables
