--- a/.azureDevOps/NextMinor.yml
+++ b/.azureDevOps/NextMinor.yml
@@ -5,12 +5,15 @@ variables:
 - group: BuildVariables
 - group: InsiderBuilds
 
+pool: Default
+
 resources:
   repositories:
     - repository: Template
-      type: git
-      name: Template
-      ref: main
+      type: github
+      endpoint: gunnargestsson # Service Connection
+      name: gunnargestsson/bcbuildtemplate
+      ref: master
 
 extends:
   template: /.azureDevOps/CI.yml@Template
