--- a/AL/app.json
+++ b/AL/app.json
@@ -4,17 +4,17 @@
     "publisher": "Objects4NAV",
     "brief": "Source Names in G/L Entries",
     "description": "G/L Source Names adds the source name to the G/L Entries page, Item Ledger Entries page and Value Entries page.  Source Name is the customer in sales transaction and the vendor in purchase transactions",
-    "version": "18.0.0.0",
+    "version": "19.0.0.0",
     "privacyStatement": "http://objects4nav.com/privacy",
     "EULA": "http://objects4nav.com/terms",
     "help": "http://objects4nav.com/glsourcenames",
     "url": "http://objects4nav.com",
     "logo": "Images\\Logo250x250.png",
-    "platform": "18.0.0.0",
-    "application": "18.0.0.0",
+    "platform": "1.0.0.0",
+    "application": "19.0.0.0",
     "target": "Cloud",
-    "runtime": "7.0",
-    "showMyCode": true,
+    "runtime": "8.0",
+    "resourceExposurePolicy": {"allowDebugging": true,"allowDownloadingSource": true,"includeSourceInSymbolFile": true},
     "screenshots": [
         "Screenshots\\AssistedSetup.PNG",
         "Screenshots\\AssistedSetupFinished.PNG",
@@ -23,7 +23,7 @@
         "Screenshots\\SourceNamesInGLEntries.PNG"
     ],
     "dependencies": [],
-    "applicationInsightsKey": "ab5e692a-2ef8-40ac-bed4-74fe61285bf2",
+    "applicationInsightsConnectionString": "InstrumentationKey=ab5e692a-2ef8-40ac-bed4-74fe61285bf2;IngestionEndpoint=https://westeurope-1.in.applicationinsights.azure.com/",
     "idRanges": [
         {
             "from": 70009200,
