--- a/ALTests/app.json
+++ b/ALTests/app.json
@@ -4,7 +4,7 @@
     "publisher": "Objects4NAV",
     "brief": "Test Tool for Source Names in G/L Entries",
     "description": "G/L Source Names adds the source name to the G/L Entries page.  Source Name is the customer in sales transaction and the vendor in purchase transactions.  This extension is used to test the functionality automatically.",
-    "version": "18.0.0.0",
+    "version": "19.0.0.0",
     "privacyStatement": "http://objects4nav.com/privacy",
     "EULA": "http://objects4nav.com/terms",
     "help": "http://objects4nav.com/glsourcenames",
@@ -15,34 +15,33 @@
             "id": "23de40a6-dfe8-4f80-80db-d70f83ce8caf",
             "name": "Test Runner",
             "publisher": "Microsoft",
-            "version": "18.0.0.0"
+            "version": "19.0.0.0"
         },
         {
             "id": "dd0be2ea-f733-4d65-bb34-a28f4624fb14",
             "name": "Library Assert",
             "publisher": "Microsoft",
-            "version": "18.0.0.0"
+            "version": "19.0.0.0"
         },
         {
             "id": "5d86850b-0d76-4eca-bd7b-951ad998e997",
             "name": "Tests-TestLibraries",
             "publisher": "Microsoft",
-            "version": "18.0.0.0"
+            "version": "19.0.0.0"
         },
         {
             "name": "G/L Source Names",
             "publisher": "Objects4NAV",
-            "version": "18.0.0.0",
+            "version": "19.0.0.0",
             "id": "479e77f3-031a-49fe-bb6a-314464c6a9a8"
         }
     ],
     "screenshots": [],
-    "runtime": "7.0",
-    "platform": "18.0.0.0",
-    "application": "18.0.0.0",
+    "runtime": "8.0",
+    "platform": "1.0.0.0",
+    "application": "19.0.0.0",
     "target": "Cloud",
-    "showMyCode": true,
-    "applicationInsightsKey": "ab5e692a-2ef8-40ac-bed4-74fe61285bf2",
+    "resourceExposurePolicy": {"allowDebugging": true,"allowDownloadingSource": true,"includeSourceInSymbolFile": true},
     "idRanges":[ {
         "from": 70009240,
         "to": 70009249
