--- a/ALTests/.vscode/launch.json
+++ b/ALTests/.vscode/launch.json
@@ -2,16 +2,19 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Publish: Microsoft cloud sandbox",
             "type": "al",
             "request": "launch",
-            "name": "Local container",
-            "server": "http://cronus18w1",
-            "serverInstance": "bc",
-            "tenant": "default",
-            "authentication": "UserPassword",
-            "startupObjectId": 130451,
-            "startupObjectType": "Page",
-            "breakOnError": true
+            "environmentType": "Sandbox",
+            "environmentName": "sandbox",
+            "startupObjectId": 22,
+            "breakOnError": true,
+            "breakOnRecordWrite": false,
+            "launchBrowser": true,
+            "enableSqlInformationDebugger": true,
+            "enableLongRunningSqlStatements": true,
+            "longRunningSqlStatementsThreshold": 500,
+            "numberOfSqlStatements": 10
         }
     ]
 }
