--- a/.azureDevOps/build-settings.json
+++ b/.azureDevOps/build-settings.json
@@ -48,7 +48,7 @@
         {
             "branch": "refs/heads/master",
             "previousApps": [
-                "https://365bcfiles.blob.core.windows.net/artifacts/gunnargestsson/glsourcenames/AL/Objects4NAV_GL Source Names_18.0.17.0.app"
+                "https://365bcfiles.blob.core.windows.net/artifacts/gunnargestsson/glsourcenames/bc18/18.0/current/Objects4NAV/GL Source Names.app"
             ],
             "countries": [
                 "is",
